style.css
/* generell */

* {
  margin: 0;
  padding: 0;

  box-sizing: border-box;
}

body {
  padding: 3rem;

  background-image: url("./assets/cr.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}
::-webkit-scrollbar-thumb {
  background-color: #c0c0c0;
  border-radius: 20px;
  border: 6px solid transparent;
}

canvas {
  display: block;
  background-color: #c0c0c0;
  /* min-width: 200px; */
  /* width: 750px; */

  border-radius: 10px;
  margin-top: 2rem;
}
/* Show Coins */

.coin-card {
  width: 100%;

  display: flex;

  justify-content: center;
  align-items: center;
  background-color: #ffff00;

  padding: 1rem 2rem;
  border-radius: 10px;
}

.coin-card__coin-name {
  width: 50%;
  text-wrap: nowrap;
}

.coin-logo {
  display: flex;
  justify-content: end;
}

.logo-pic {
  width: 25%;
}

.show-coins {
  border: 1px #ffff00 solid;
  border-radius: 10px;
  padding: 2rem;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-width: 50%;
  gap: 1rem;
  height: 50vh;
  width: 100%;
  overflow-x: auto;
}

.coins-list {
  padding-bottom: 1rem;
  text-align: center;
  color: white;
}

/* Show Trades */

.trade-table {
  padding: 0.5rem;
  border: 1px #ffff00 solid;
  border-radius: 10px;
  margin-top: 3rem;
  height: 50vh;
  overflow: auto;
}

.pair-card {
  background-color: #ffff00;

  padding: 0.5rem;

  border-radius: 20px;

  margin: 0.5rem;
}
.trade-properties {
  display: flex;

  margin: 0.5rem;

  /* gap: 0rem; */
}

.pair-card__button {
  background: none repeat scroll 0 0 transparent;
  border: none;
  width: inherit;
}
/* 
.pricesPart {
  display: flex;
  justify-content: center;
  align-items: center;
} */
.trade-properties__coins {
  display: flex;
  justify-content: space-between;
  width: 50%;
  gap: 5rem;
}

.trade-properties__price-report {
  text-wrap: nowrap;
}
.trade-properties__show-coin {
  display: flex;
  align-items: center;
  gap: 1rem;
}

/* .trade-properties__show-coin {
  display: flex;
  align-items: center;
  gap: 1rem;
} */

.trade-properties__show-price {
  width: 25%;

  display: flex;
  justify-content: start;
  align-items: center;
}

.trade-properties__coin-name {
  padding-bottom: 1rem;

  font-weight: bolder;
}

.coin-logo {
  max-width: 200px;

  display: flex;
  justify-content: end;
}

.trade-list {
  margin-top: 2rem;
  text-align: center;
  color: white;
}

/* chart card */

.chart-card {
  display: flex;
  justify-content: center;
  margin-top: 0.5rem;
}

.trade-properties__prices {
  display: flex;
  gap: 2rem;
}

/* input */

.show-chart__input {
  width: min-content;
  background-color: #c0c0c0;
  border: none;

  border-radius: 10px;
  height: 40px;
  width: 80px;
  padding: 1rem;
}

.show-chart__precision-lable {
  color: white;
  margin-right: 0.5rem;
  margin-top: 1rem;
  font-weight: bold;
}

.show-chart {
  margin: 2rem;
  display: flex;
  flex-direction: column;

  align-items: center;
}

@media screen and (min-width: 200px) {
  .pair-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .show-coins {
    display: flex;
    flex-direction: column;

    gap: 1rem;
  }

  .trade-properties {
    display: flex;
    flex-direction: column;
    margin: 0.5rem;
    align-items: center;
    gap: 0.5rem;
    overflow: hidden;
  }

  .coin-logo {
    min-width: 50px;
    max-width: 100px;
  }

  .trade-properties__coins {
    width: initial;
    gap: 1rem;
    display: flex;
    flex-direction: column;
  }
  .trade-properties__show-price {
    width: initial;
  }

  /* canvas {
    width: 200px;
  } */
}

@media screen and (min-width: 370px) {
  canvas {
    width: 400px;
  }
  .trade-properties__coins {
    width: initial;
    gap: 5rem;
    display: flex;
    flex-direction: row;
    margin-bottom: 0.5rem;
  }
}
@media screen and (min-width: 700px) {
  canvas {
    width: 600px;
  }
  .trade-table {
    display: grid;
    grid-template-columns: 50% 50%;
  }
  .show-coins {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-width: 50%;
    gap: 1rem;
  }

  .trade-properties {
    display: flex;
    /* flex-direction: row; */
    margin: 0.5rem;

    gap: 2rem;
  }

  .trade-properties__coins {
    gap: 3rem;
  }

  .coin-logo {
    max-width: 150px;
  }
}

@media screen and (min-width: 880px) {
  canvas {
    width: 750px;
  }
  .show-coins {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-width: 50%;
    gap: 1rem;
  }

  .trade-properties {
    display: flex;

    margin: 0.5rem;

    column-gap: 3rem;
  }

  .pair-card {
    display: flex;
    justify-content: space-between;
  }

  .trade-properties__coins {
    margin-bottom: 0rem;
  }
}

@media screen and (min-width: 1300px) {
  .trade-table {
    display: grid;
    grid-template-columns: 50% 50%;
  }

  .trade-properties__coins {
    margin-bottom: 0rem;
  }
}

